# mypico

./: README.md  pitch_detection.txt
acquire_signal/: CMakeLists.txt  E-10ksps.txt  main.c
autocorr/: CMakeLists.txt  E-raw.cap  E.h  main.c
bus_scan/: CMakeLists.txt  bus_scan.c  main.c
calibrate/: calibrate.c
freq_to_display/: CMakeLists.txt  freq_to_display.c  main.c
frequency_irq/: CMakeLists.txt  frequency_irq.c
frequency_irq_abs/: CMakeLists.txt  frequency_irq_abs.c
frequency_irq_i2c/: CMakeLists.txt  main.c
i2c_mcp23018/: CMakeLists.txt  i2c_mcp23018.c  main.c
lcdtest/: CMakeLists.txt  info.txt  main.c
lcdtest/examples/: LCD_1in14_test.c
myblink/: CMakeLists.txt  main.c
pitch/: CMakeLists.txt  CMakeLists3.bck
precision/: accur.c
testobp/: CMakeLists.txt  main  main.c  testdata.h
testobp2/: .gitignore  A2_3S.cap  B3_3S.cap  D3_3S.cap  E2_3S.cap  E4_3S.cap  G3_3S.cap  Makefile  main.c  setdata.sh
testyin/: CMakeLists.txt  test1.h  testdata.h  testpico.c
tuner_acorr/: CMakeLists.txt  accur.c  data.h  limit.c  limit.h  main.c
tuner_cnt10/: CMakeLists.txt  fedge.c  fedge.h  main.c  rtimer.c  rtimer.h
tuner_cnt10_nw/: comments.txt  fdetect.c  fdetect.h  fedge.c  fedge.h  main.c
tuner_count/: CMakeLists.txt  fdetect.c  fedge.h  main.c
tuner_count_no_wait/: fdetect.c
tuner_count_nw/: CMakeLists.txt  fdetect.h  fedge.c  main.c
tuner_lcd/: CMakeLists.txt  fedge.c  main.c
tuner_lcd/lib/Config/: DEV_Config.c  DEV_Config.h  Debug.h
tuner_lcd/lib/GUI/: GUI_Paint.c
tuner_lcd/lib/Icm20948/: icm20948.c
tuner_lcd/lib/Infrared/: Infrared.c
tuner_lcd/lib/LCD/: LCD_1in14.c
tuner_obp/: CMakeLists.txt  main.c
tuner_strcor/: CMakeLists.txt  fdetect.c  main.c
tuner_strings/: CMakeLists.txt  fdetect.c  fdetect.h  fedge.c  fedge.h  main.c
tuner_yin/: CMakeLists1.txt  main.c  pitch.h
util/: accur.h  alpha.c  alpha.h  calibrate.c  calibrate.h  limit.c  limit.h
